commenting stuff out of the build script
Signed-off-by: Ash Entwisle <ash.entwisle@protonmail.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,9 +10,9 @@ jobs:
     steps:
       - name: Checkout 
         uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
-          token: ${{ secrets.ACTION_TOKEN }}
+        # with:
+        #   submodules: 'recursive'
+        #   token: ${{ secrets.ACTION_TOKEN }}
       - name: Install Deps
         run: |
             # update repos, install updates
