--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,10 +3,14 @@ on:
   push:
     paths-ignore:
       - '**/*.tar.gz'
+    tags:
+    - '*'
 jobs:
   report:
     runs-on: ubuntu-24.04-arm
-    
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout 
         uses: actions/checkout@v4
@@ -78,12 +82,18 @@ jobs:
 
           make build
           tar -czvf target.tar.gz target/
-      - name: Commit report
-        run: |       
-          git config --global user.name 'RPI WiFi Controller Auto-Build'
-          git config --global user.email 'action@github.com'
+      # - name: Commit report
+      #   run: |       
+      #     git config --global user.name 'RPI WiFi Controller Auto-Build'
+      #     git config --global user.email 'action@github.com'
 
-          git add target.tar.gz || exit 0
+      #     git add target.tar.gz || exit 0
 
-          git commit -am "automated: build action" || exit 0
-          git push
+      #     git commit -am "automated: build action" || exit 0
+      #     git push
+      - name: Release
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "target.tar.gz"
+          bodyFile: "CHANGELOG.md"
+          prerelease: true
