i very much dislike gh actipns
Signed-off-by: Ash Entwisle <ash.entwisle@protonmail.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -82,18 +82,24 @@ jobs:
 
           make build
           tar -czvf target.tar.gz target/
-      # - name: Commit report
-      #   run: |       
-      #     git config --global user.name 'RPI WiFi Controller Auto-Build'
-      #     git config --global user.email 'action@github.com'
 
-      #     git add target.tar.gz || exit 0
+      - name: Commit report
+        run: |       
+          git config --global user.name 'RPI WiFi Controller Auto-Build'
+          git config --global user.email 'action@github.com'
 
-      #     git commit -am "automated: build action" || exit 0
-      #     git push
-      - name: Release
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "target.tar.gz"
-          bodyFile: "CHANGELOG.md"
-          prerelease: true
+          git add target.tar.gz || exit 0
+          # git add VERSION || exit 0
+
+          # # tag version
+          # git tag -a $(cat VERSION) -m "version $(cat VERSION)" || exit 0
+
+          git commit -am "automated: build action" || exit 0
+          git push
+          
+      # - name: Release
+      #   uses: ncipollo/release-action@v1
+      #   with:
+      #     artifacts: "target.tar.gz"
+      #     bodyFile: "CHANGELOG.md"
+      #     prerelease: true
