--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,9 +14,9 @@ jobs:
     steps:
       - name: Checkout 
         uses: actions/checkout@v4
-        # with:
-        #   submodules: 'recursive'
-        #   token: ${{ secrets.ACTION_TOKEN }}
+        with:
+          submodules: 'recursive'
+          token: ${{ secrets.ACTION_TOKEN }}
       - name: Install Deps
         run: |
             # update repos, install updates
