--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -96,11 +96,12 @@ jobs:
 
           git commit -am "automated: build action" || exit 0
           git push
-          
+      - name: debug
+        run: |
+          strings /usr/lib/aarch64-linux-gnu/libstdc++.so.6.0.30 | grep GLIBCXX
       # - name: Release
       #   uses: ncipollo/release-action@v1
       #   with:
       #     artifacts: "target.tar.gz"
       #     bodyFile: "CHANGELOG.md"
       #     prerelease: true
-      
