--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,9 +24,10 @@ jobs:
             # sudo apt upgrade -y
 
             # make sure required software is installed
-            sudo apt install software-properties-common wget xz-utils gcc build-essential clang make cmake -y
-            sudo apt install gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu g++-aarch64-linux-gnu -y
-            sudo apt install python3 python3-pip -y
+            # sudo apt install software-properties-common wget xz-utils gcc build-essential clang make cmake -y
+            # sudo apt install gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu g++-aarch64-linux-gnu -y
+            # sudo apt install python3 python3-pip -y
+            sudo apt install make -y
             sudo apt install gpiod libgpiod-dev -y
             sudo apt install fakeroot gettext-base -y
       - name: Clean Files
